# py-swes

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
config/: williamson_1.yml  williamson_6.yml
scripts/: animate.py  config.yml  plot.py  run.py
src/swes/: __init__.py  build_config.py  config.py  diffusion.py  driver.py  grid.py  halo.py  initialization.py  orography.py  output.py  pole.py  solver.py  state.py  utils.py
