[metadata]
name = swes
version = 0.0
author = ETH Zurich
author_email = subbiali@phys.ethz.ch
description = Solver for the Shallow Water Equations over a Sphere (SWES)
url = https://github.com/stubbiali/py-swes.git
;keywords =
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: Apache License Version 2.0
  Operating System :: POSIX
  Programming Language :: Python :: 3.10
long_description = file: README.md
long_description_content_type = text/markdown
license = apache2
platforms = Linux, Mac

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
  = src
python_requires = >=3.8
install_requires =
  click
  gt4py[dace]
  matplotlib
  netCDF4
  pydantic

[options.packages.find]
where=src
