# py-swes: A Python solver for the Shallow Water Equations over a Sphere (SWES)
# Copyright (C) 2016-2023, ETH Zurich
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = swes
version = 0.0
author = ETH Zurich
author_email = subbiali@phys.ethz.ch
description = Solver for the Shallow Water Equations over a Sphere (SWES)
url = https://github.com/stubbiali/py-swes.git
;keywords =
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: Apache License Version 2.0
  Operating System :: POSIX
  Programming Language :: Python :: 3.10
long_description = file: README.md
long_description_content_type = text/markdown
license = apache2
platforms = Linux, Mac

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
  = src
python_requires = >=3.8
install_requires =
  click
  gt4py[dace]
  matplotlib
  netCDF4
  pydantic

[options.packages.find]
where=src
